<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context="kronos.comkronoscodecomandroid.activity.activity.WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/welcome_central_image_height"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_welcome_logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/title_welcome"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/welcome_title_text_size_h"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_title"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/title_2_welcome"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/welcome_title_text_size"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/title_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_title_2"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/title_3_welcome"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/buttonsGroup"
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:layout_below="@id/title_3"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_go_to_list"
            android:layout_width="@dimen/welcome_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn"
            android:padding="20dp"
            android:text="@string/guide_list"
            android:textAllCaps="true"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/list_number_text_size_2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_go_about"
            android:layout_width="@dimen/welcome_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn"
            android:padding="20dp"
            android:text="@string/title_activity_about"
            android:textAllCaps="true"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/list_number_text_size_2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_go_tutorial"
            android:layout_width="@dimen/welcome_screen_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn"
            android:padding="20dp"
            android:text="@string/tutorial"
            android:textAllCaps="true"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/list_number_text_size_2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_go_weather"
            android:layout_width="@dimen/welcome_screen_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:padding="20dp"
            android:text="@string/weather"
            android:textAllCaps="true"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/list_number_text_size_2"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            />

        <Button
            android:id="@+id/btn_go_coffee_price"
            android:layout_width="@dimen/welcome_screen_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:padding="20dp"
            android:text="@string/coffee_price"
            android:textAllCaps="true"
            android:textColor="@drawable/button_text_color"
            android:textSize="@dimen/list_number_text_size_2"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_below="@id/buttonsGroup"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/weather_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/lwr_logo"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_welcome_logo_footer"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/lutheran"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/lwr_horizontal_white" />

                </LinearLayout>



            </LinearLayout>


        </LinearLayout>




    </RelativeLayout>
</RelativeLayout>
