<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true"
    android:background="@drawable/coffee_bg"
    tools:context="kronos.comkronoscodecomandroid.activity.activity.coffeePriceActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/coffee_toolbar"
            layout="@layout/app_weather_toolbar" />
        <LinearLayout
            android:id="@+id/coffee_price_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coffee_toolbar"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_international_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textFontWeight="900"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/price_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Posición "
                    android:textColor="@color/white"
                    android:textFontWeight="800"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/today_range_data"
            android:background="@drawable/border_radious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/coffee_price_position"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_today_range"
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    android:gravity="left"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_today_range_desc"
                    android:textColor="#A7A7A7"
                    android:textSize="16sp"
                    android:textFontWeight="800" />

                <TextView
                    android:id="@+id/todayRange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pre_close_data"
            android:background="@drawable/border_radious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/today_range_data"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_prev_close"
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_prev_close_desc"
                    android:textColor="#A7A7A7"
                    android:textSize="16sp"
                    android:textFontWeight="800" />

                <TextView
                    android:id="@+id/prev_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border_radious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/pre_close_data"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center_vertical"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coffee_open"
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#A7A7A7"
                    android:text="@string/coffee_open_desc"
                    android:textSize="16sp"
                    android:textFontWeight="800" />

                <TextView
                    android:id="@+id/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>





</ScrollView>